--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -1,8 +1,8 @@
 name: Tests at Merging
 
 on:
-  schedule:
-  - cron: 0 0 * * *
+  #schedule:
+  #- cron: 0 0 * * *
   push:
     branches: [ master ]
   pull_request:
