--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -1,8 +1,8 @@
 name: Build and Format Check
 
 on:
-  schedule:
-    - cron: 0 0 * * *
+  #schedule:
+  #  - cron: 0 0 * * *
   push:
     branches:
       - master
